CS_SBOX_20150209_01/Metadata/unpackaged/objects/AvaTax_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_URL__c</fullName>
        <label>Service URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>AvaTax Settings</label>
</CustomObject>